--- a/scrimbaIndex.css
+++ b/scrimbaIndex.css
@@ -39,6 +39,17 @@ button {
     border-radius: 30px;
    
 }
+.button1 {
+    border: 1px solid brown;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: bold;
+    font-size: 10px;
+    width: 150px;
+    margin-bottom: 5px;
+    border-radius: 30px;
+   
+}
 
 
 #increment-btn {
@@ -51,6 +62,10 @@ button {
 #save-btn {
     background: #6E3820;
     margin-top: 5px;
+}
+
+#months-all-btn {
+    background: #280D05;
 }
 
 #reset-btn {
@@ -75,5 +90,9 @@ button {
     line-height: 20px;
     border: 3px solid rgb(61, 2, 2);
     border-radius: 30px;
+}
+
+.hidden {
+   display: none;
 }
 
